--- a/packages/budget-ui/src/index.css
+++ b/packages/budget-ui/src/index.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Asap:400,700");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "~@blueprintjs/table/lib/css/table.css";
+
+*, input, select, form, button {
+  outline: none !important;
+}
 
 body {
   margin: 0;
