--- a/packages/budget-ui/src/index.css
+++ b/packages/budget-ui/src/index.css
@@ -4,7 +4,7 @@
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "~@blueprintjs/table/lib/css/table.css";
 
-*, input, select, form, button, .bp4-table-cell {
+* {
   outline: none !important;
 }
 
@@ -13,4 +13,8 @@ body {
   width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.bp4-table-overlay-layer .bp4-table-focus-region {
+  border: none;
 }
